# wearable-health-monitor

./: .gitignore  CMakeLists.txt  README.md  prj.conf  west.yml
.github/workflows/: ci.yml
app/: main.cpp
data/: imu_sample.csv  ppg_sample.csv
docs/: architecture.md  ble_future.md  debugging.md  engineering_overview.md  phase1_checklist.md  power.md
docs/results/: README.md
src/algorithms/: activity.cpp  activity.h  heart_rate.cpp  heart_rate.h  heart_rate_coeffs.h
src/drivers/: imu_driver.h  imu_skeleton_driver.cpp  imu_skeleton_driver.h  max30102_driver.cpp  max30102_driver.h  mock_imu_driver.cpp  mock_imu_driver.h  mock_ppg_driver.cpp  mock_ppg_driver.h  ppg_driver.h
src/services/: sensor_manager.cpp  sensor_manager.h
tests/: CMakeLists.txt  test_activity.cpp  test_heart_rate.cpp  test_iir_sos.cpp
tools/: gen_iir_coeffs.py  plot_results.py  validate.py
